Agregado nuevas rutas y un ejemplo desde MySQL

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -11,7 +11,7 @@
 
   <main>
     <div>
-      <h1 class="title"> It Works! </h1>
+      <h1 class="title"> It Works otra vez! </h1>
       <p class="subtitle">
         Congratulations, you have just created your first AdonisJS app.
       </p>
@@ -19,10 +19,6 @@
       <ul>
         <li>
           The route for this page is defined inside <code>start/routes.ts</code> file
-        </li>
-
-        <li>
-          You can update this page by editing <code>resources/views/welcome.edge</code> file
         </li>
 
         <li>
