--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AdonisJS - A fully featured web framework for Node.js</title>
-  @entryPointStyles('app')
-  @entryPointScripts('app')
-</head>
-<body>
+@layout('layouts/main')
 
-  <main>
-    <div>
-      <h1 class="title"> It Works otra vez! </h1>
-      <p class="subtitle">
-        Congratulations, you have just created your first AdonisJS app.
-      </p>
+@section('content')
+<div class="d-flex justify-content-center text-center">
+  <div class="row">
+    <h1 class="title"> It Works otra vez! </h1>
+  </div>
+  <p class="subtitle">
+    Congratulations, you have just created your first AdonisJS app.
+  </p>
 
-      <ul>
-        <li>
-          The route for this page is defined inside <code>start/routes.ts</code> file
-        </li>
+  <ul>
+    <li>
+      The route for this page is defined inside <code>start/routes.ts</code> file
+    </li>
 
-        <li>
-          If you run into problems, you can reach us on <a href="https://discord.gg/vDcEjq6?">Discord</a> or the <a href="https://forum.adonisjs.com/">Forum</a>.
-        </li>
-      </ul>
-    </div>
-  </main>
-</body>
-</html>
+    <li>
+      If you run into problems, you can reach us on <a href="https://discord.gg/vDcEjq6?">Discord</a> or the <a href="https://forum.adonisjs.com/">Forum</a>.
+    </li>
+  </ul>
+</div>
+@endsection
